// Визначає версію синтаксису Protocol Buffers (proto3), яку використовує цей файл.
syntax = "proto3";

//Вказує простір імен для генерованого коду на C#, який використовується для серіалізації та десеріалізації даних.
option csharp_namespace = "BookCollection";

//Визначає сервіс GrpcBooks, який містить один метод GetAllBook, 
//який очікує запит типу GetAllRequest і повертає відповідь типу BooksResponse.
service GrpcBooks {
    rpc GetAllBook (GetAllRequest) returns (BooksResponse);
}

//Визначає порожній тип повідомлення GetAllRequest, який використовується як параметр для методу GetAllBook.
message GetAllRequest {}

//Визначає тип повідомлення GrpcBookCollection, який представляє інформацію про книгу. Включає п'ять поля
message GrpcBookCollection{
    int32 booksId = 1;
    string tittle = 2;
    string author = 3;
    string genre = 4;
    string owner = 5;
}
Визначає тип повідомлення BooksResponse, яке містить повторюваний (список) елемент типу GrpcBookCollection з іменем book.
message BooksResponse {
    repeated GrpcBookCollection book = 1;
}